--- a/package.json
+++ b/package.json
@@ -28,7 +28,9 @@
     "typescript": "^4.0.0"
   },
   "dependencies": {
+    "axios": "^0.21.1",
     "sirv-cli": "^1.0.0",
+    "svelte-frappe-charts": "^1.8.3",
     "svelte-routing": "^1.6.0"
   }
 }
